--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 html{
-    background-color: black;
+    background-color: grey;
     color: white;
     font-family: 'Raleway', sans-serif;
 }
-
+/*
+body {
+    background-image: url("https://wallpaperscraft.com/image/minimalism_sky_clouds_sun_mountains_lake_landscape_95458_602x339.jpg");
+}
+*/
 div.tile{
     box-shadow:2px 2px black;
     border:4px solid white;
     border-radius:10px;
     padding:20px;
-    width:50px;
-    height:50px;
+    width:70px;
+    height:70px;
     vertical-align:top;
     display:inline-block;
     margin:5px;
