--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ body {
     background-image: url("https://wallpaperscraft.com/image/minimalism_sky_clouds_sun_mountains_lake_landscape_95458_602x339.jpg");
 }
 */
+
 #card1{
     margin-top: 29px;
 }
+
 div.tile{
     box-shadow:2px 2px black;
     border:4px solid white;
@@ -28,6 +30,9 @@ div.tile{
 div.flip{
     background-color: black;
     color: white;
+}
+.invisible{
+    visibility: hidden;
 }
 .center{
     text-align: center;
